@@ -1,18 +1,18 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-components/adapter/main.c
 components/adapter/Nautilus_ComponentAdapterFactory_std.server.in.in
-components/emblem/nautilus-emblem-view.c
+components/adapter/main.c
 components/emblem/Nautilus_View_emblem.server.in.in
-components/history/nautilus-history-view.c
+components/emblem/nautilus-emblem-view.c
 components/history/Nautilus_View_history.server.in.in
-components/image_properties/nautilus-image-properties-view.c
+components/history/nautilus-history-view.c
 components/image_properties/Nautilus_View_image_properties.server.in.in
-components/notes/nautilus-notes.c
+components/image_properties/nautilus-image-properties-view.c
 components/notes/Nautilus_View_notes.server.in.in
-components/text/nautilus-text-view.c
-components/text/nautilus-text-view-ui.xml
+components/notes/nautilus-notes.c
 components/text/Nautilus_View_text.server.in.in
+components/text/nautilus-text-view-ui.xml
+components/text/nautilus-text-view.c
 components/throbber/Nautilus_Control_throbber.server.in.in
 components/throbber/nautilus-throbber.c
 data/applications.desktop.in
@@ -28,23 +28,21 @@ icons/tahoe/tahoe.xml
 libnautilus-extension/nautilus-column.c
 libnautilus-extension/nautilus-menu-item.c
 libnautilus-extension/nautilus-property-page.c
-libnautilus/nautilus-clipboard.c
-libnautilus/nautilus-clipboard-ui.xml
 libnautilus-private/apps_nautilus_preferences.schemas.in
 libnautilus-private/nautilus-column-chooser.c
 libnautilus-private/nautilus-column-utilities.c
 libnautilus-private/nautilus-customization-data.c
 libnautilus-private/nautilus-desktop-directory-file.c
 libnautilus-private/nautilus-desktop-icon-file.c
-libnautilus-private/nautilus-desktop-link.c
 libnautilus-private/nautilus-desktop-link-monitor.c
+libnautilus-private/nautilus-desktop-link.c
 libnautilus-private/nautilus-dnd.c
 libnautilus-private/nautilus-emblem-utils.c
 libnautilus-private/nautilus-entry.c
-libnautilus-private/nautilus-file.c
-libnautilus-private/nautilus-file-operations.c
 libnautilus-private/nautilus-file-operations-progress.c
+libnautilus-private/nautilus-file-operations.c
 libnautilus-private/nautilus-file-utilities.c
+libnautilus-private/nautilus-file.c
 libnautilus-private/nautilus-global-preferences.c
 libnautilus-private/nautilus-icon-canvas-item.c
 libnautilus-private/nautilus-icon-container.c
@@ -56,12 +54,13 @@ libnautilus-private/nautilus-trash-directory.c
 libnautilus-private/nautilus-trash-file.c
 libnautilus-private/nautilus-tree-view-drag-dest.c
 libnautilus-private/nautilus-undo-signal-handlers.c
-libnautilus-private/nautilus-view-identifier.c
+libnautilus/nautilus-clipboard-ui.xml
+libnautilus/nautilus-clipboard.c
 nautilus-computer.desktop.in
-nautilus.desktop.in
 nautilus-file-management-properties.desktop.in
 nautilus-home.desktop.in
-src/file-manager/fm-bonobo-provider.c
+nautilus.desktop.in
+src/Nautilus_shell.server.in
 src/file-manager/fm-desktop-icon-view.c
 src/file-manager/fm-directory-view.c
 src/file-manager/fm-ditem-page.c
@@ -81,32 +80,33 @@ src/nautilus-bookmarks-window.c
 src/nautilus-bookmarks-window.glade
 src/nautilus-connect-server-dialog.c
 src/nautilus-desktop-window.c
+src/nautilus-emblem-sidebar.c
+src/nautilus-file-management-properties-main.c
 src/nautilus-file-management-properties.c
 src/nautilus-file-management-properties.glade
-src/nautilus-file-management-properties-main.c
 src/nautilus-first-time-druid.c
+src/nautilus-history-sidebar.c
+src/nautilus-image-properties-page.c
 src/nautilus-information-panel.c
 src/nautilus-location-bar.c
 src/nautilus-location-dialog.c
 src/nautilus-location-entry.c
 src/nautilus-main.c
-src/nautilus-navigation-window.c
 src/nautilus-navigation-window-menus.c
 src/nautilus-navigation-window-ui.xml
-src/nautilus-profiler.c
+src/nautilus-navigation-window.c
+src/nautilus-notes-viewer.c
 src/nautilus-property-browser.c
-src/nautilus-shell.c
-src/Nautilus_shell.server.in
 src/nautilus-shell-ui.xml
-src/nautilus-sidebar-title.c
+src/nautilus-shell.c
 src/nautilus-side-pane.c
-src/nautilus-spatial-window.c
+src/nautilus-sidebar-title.c
 src/nautilus-spatial-window-ui.xml
-src/nautilus-view-frame.c
-src/nautilus-window.c
+src/nautilus-spatial-window.c
 src/nautilus-window-manage-views.c
 src/nautilus-window-menus.c
 src/nautilus-window-private.h
 src/nautilus-window-toolbars.c
+src/nautilus-window.c
 src/nautilus-zoom-control.c
 src/network-scheme.desktop.in
