@@ -13,13 +13,3 @@ components/news/Nautilus_View_news.server.in
 components/news/nautilus-cell-renderer-news.c
 components/news/nautilus-news.c
 libbackground/applier.c
-# Medusa/search-related files.
-libnautilus-private/nautilus-medusa-support.c
-libnautilus-private/nautilus-search-uri.c
-src/file-manager/fm-search-list-view.c
-src/file-manager/nautilus-indexing-info.c
-src/file-manager/nautilus-search-list-view-ui.xml
-src/nautilus-complex-search-bar.c
-src/nautilus-search-bar-criterion.c
-src/nautilus-simple-search-bar.c
-src/nautilus-switchable-search-bar.c
