@@ -1,3 +1,10 @@
+2004-11-16  Alexander Larsson  <alexl@redhat.com>
+
+	reviewed by: <delete if not using a buddy>
+
+	* POTFILES.in:
+	* POTFILES.skip:
+
 === nautilus 2.8.2 ===
 
 2004-10-25  Mohammad DAMT  <mdamt@bisnisweb.com>
